# astro-skill

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.full  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml
.github/workflows/: ci.yml  release.yml  validate_skill.py
apps/pandit_web/: README.md
astro/: SKILL.md
astro/agents/: openai.yaml
astro/config/: defaults.json
astro/data/: ashtakavarga_data.json  avakahada_data.json  compatibility_data.json  functional_nature.json  gochar_narrative_data.json  graha_data.json  nakshatra_db.json  personality_ext.json  phalit_basic.json  phalit_ext.json  remedies.json  remedies_ext.json
astro/ephe/: README.md
astro/scripts/: __init__.py  ashtakavarga.py  aspects.py  avakahada.py  dasha_calculator.py  gochar_calculator.py  gochar_narrative.py  guna_milan.py  html_pdf_report.py  kundali_calculator.py  panchang_calculator.py  pdf_report.py  remedies.py  report_generator.py  scoring.py  swe_lock.py  synthesis.py  vargas.py  yoga_detector.py
astro/tests/: test_ashtakavarga.py  test_aspects.py  test_astro_mcp_server.py  test_astro_mcp_storage.py  test_astro_mcp_tools.py  test_avakahada.py  test_ayanamsa.py  test_dasha.py  test_dasha_balance_antardasha.py  test_gochar.py  test_gochar_narrative.py  test_guna_milan.py  test_kundali.py  test_panchang.py  test_parse_birth_details_time.py  test_pdf_report.py  test_pdf_report_escaping.py  test_planetary_strength.py  test_pratyantardasha.py  test_premium_pdf_sections.py  test_project_structure.py  test_remedies.py  test_report.py  test_scoring.py  test_smoke_mcp_script.py  test_synthesis.py  test_vargas.py  test_yoga.py
docs/: deploy.md
docs/architecture/: astro-skill-roadmap.md  generic-astro-platform.md
docs/operations/: install-smoke.md
project/: architecture.json
scripts/: smoke_mcp_client.py
services/astro_mcp/: README.md  __init__.py  __main__.py  models.py  server.py  storage.py  tools.py
