[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-skill"
version = "1.0.0"
description = "Portable Vedic astrology engine, agent skill, and stdio MCP server (kundali, dasha, panchang, PDF reports)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.0",
    "playwright>=1.40",
    "pyswisseph>=2.10.3.2",
    "python-dateutil>=2.9.0",
    "reportlab>=4.5.1",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = ["pypdf>=6.12.2", "pytest>=8.0", "pytest-asyncio>=0.23", "pyyaml>=6.0", "ruff>=0.4.0"]

[project.scripts]
astro-mcp = "services.astro_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["astro*", "services*"]

[tool.setuptools.package-data]
astro = [
    "SKILL.md",
    "agents/*.yaml",
    "assets/*",
    "config/*.json",
    "data/*.json",
    "ephe/*",
    "scripts/fonts/*.ttf",
]

[tool.pytest.ini_options]
testpaths = ["astro/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
